kgateway/templates/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http
  namespace: kgateway-system
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTPS
    hostnames:
      - *.robertclarke.co.uk
    port: 443
    name: https
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - name: robertclarke-co-uk-tls
  - protocol: HTTP
    hostnames:
      - *.robertclarke.co.uk
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: All
  addresses:
    - type: IPAddress
      value: 192.168.1.244
